--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utente.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utente.html
@@ -4,8 +4,8 @@
     <title>Dettagli Utente</title>
 </head>
 <body>
-    <h1 th:text=" ${utente.name}"></h1>
-    <p>Descrizione: <span th:text="${utente.surname}"></span></p>
+    <h1 th:text=" ${utenteVisualizzato.name}"></h1>
+    <p>Descrizione: <span th:text="${utenteVisualizzato.surname}"></span></p>
     <div>
         <h3>Foto</h3>
 
