--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/PaginaModificaRecensione.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/PaginaModificaRecensione.html
@@ -7,17 +7,14 @@
     <h1>Modifica Recensione</h1>
     <form th:action="@{/admin/PaginaModificaRecensione/modifica}" th:object="${recensione}" method="post">
         <input type="hidden" th:field="*{id}" />
-        <div>
-            <label>Nome:</label>
-            <input type="text" th:field="*{nome_recensione}" />
-        </div>
+
         <div>
             <label>Descrizione:</label>
             <textarea th:field="*{descrizione_recensione}"></textarea>
         </div>
         <div>
             <label>Archiviato:</label>
-            <input type="checkbox" th:field="*{archiviato_recensione}" />
+            <input type="checkbox" th:field="*{approvazione}" />
         </div>
         <button type="submit">Salva</button>
     </form>
