--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utenti.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utenti.html
@@ -7,7 +7,7 @@
     <h1>Gestione di tutti gli utenti</h1>
     <ul>
         <li th:each="utente : ${tutti_utenti}">
-            <a th:href="@{/admin/PaginaModificaUtente/{id}(id=${utente.id})}" th:text="${utente.name}"></a>
+            <a th:href="@{/utente/{utenteId}(utenteId=${utente.id})}" th:text="${utente.name}"></a>
 			<p th:text="${utente.provider}"></p>
             <form th:action="@{/admin/remove/user/{utenteid}(utenteid=${utente.id})}" method="post">
                 <input type="hidden" name="_method" value="delete" />
