--- a/iFioriDiTania/src/main/resources/templates/servizio.html
+++ b/iFioriDiTania/src/main/resources/templates/servizio.html
@@ -4,7 +4,7 @@
     <title>Dettagli Servizio</title>
 </head>
 <body>
-    <h1 th:text="'Dettagli del servizio: ' + ${servizio.nome_servizio}"></h1>
+    <h1 th:text=" ${servizio.nome_servizio}"></h1>
     <p>Descrizione: <span th:text="${servizio.descrizione_servizio}"></span></p>
     <p>Archiviato: <span th:text="${servizio.archiviato_servizio} ? 'Sì' : 'No'"></span></p>
     <div>
