--- a/iFioriDiTania/src/main/resources/templates/evento.html
+++ b/iFioriDiTania/src/main/resources/templates/evento.html
@@ -4,7 +4,7 @@
     <title>Dettagli Evento</title>
 </head>
 <body>
-    <h1 th:text="'Dettagli dell'evento: ' + ${evento.nome_evento}"></h1>
+    <h1 th:text=" ${evento.nome_evento}"></h1>
     <p>Descrizione: <span th:text="${evento.descrizione_evento}"></span></p>
     <p>Archiviato: <span th:text="${evento.archiviato_evento} ? 'Sì' : 'No'"></span></p>
     <div>
