--- a/iFioriDiTania/src/main/resources/templates/recensioni.html
+++ b/iFioriDiTania/src/main/resources/templates/recensioni.html
@@ -7,7 +7,7 @@
     <h1>Elenco di tutte le recensioni</h1>
     <ul>
         <li th:each="recensione : ${tutte_recensioni}">
-            <a th:href="@{/recensione/{id}(id=${recensione.id})}" th:text="${recensione.nome_recensione}"></a>
+            <a th:href="@{/recensione/{id}(id=${recensione.id})}" th:text="${recensione.descrizione_recensione}"></a>
         </li>
     </ul>
 </body>
