--- a/iFioriDiTania/src/main/resources/templates/admin/indexAdmin.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/indexAdmin.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div><img src="/images/logo-siw.png" width="50%" /></div>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+	
     <h1> Amministrazione</h1>
     <nav>
         <ul>
