--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/PaginaModificaRecensione.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/PaginaModificaRecensione.html
@@ -13,7 +13,7 @@
             <textarea th:field="*{descrizione_recensione}"></textarea>
         </div>
         <div>
-            <label>Archiviato:</label>
+            <label>Approvazione:</label>
             <input type="checkbox" th:field="*{approvazione}" />
         </div>
         <button type="submit">Salva</button>
