--- a/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
+++ b/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-	<header th:fragment="headernav" id="headernav">
+	<header th:fragment="headernav" id="headernav" class="headernav">
 	  <div class="box">
 	    <div class="logo">
 	      <a th:href="@{/}">
@@ -16,59 +16,30 @@
 				</a>
 	    </div>
 	    <div class="interaction">
-	        <ul class="nav-links" id="nav-links">
-	          
-	          <li class="dropdown">
-	            <a href="/ricette">Fiori</a>
-	              <ul class="dropdown-content">
-	                  <li><a href="/ricette/fiore1">Fiore 1</a></li>
-	                  <li><a href="/ricette/fiore2">Fiore 2</a></li>
-	                  <li><a href="/ricette/fiore3">Fiore 3</a></li>
-	              </ul>
-	        </li>
-	          <li class="dropdown">
-	    <a href="/piante">Piante</a>
-	    <ul class="dropdown-content">
-	        <li><a href="/piante/pianta1">Pianta 1</a></li>
-	        <li><a href="/piante/pianta2">Pianta 2</a></li>
-	        <li><a href="/piante/pianta3">Pianta 3</a></li>
-	    </ul>
-	</li>
+			<ul class="nav-links" id="nav-links">
+			    <li><a th:href="@{/fiori}">Fiori</a></li>
+			    <li><a th:href="@{/}">Piante</a></li>
+			    <li><a th:href="@{/servizi}">Servizi</a></li>
+			    <li><a th:href="@{/accessori}">Accessori</a></li>
+			    <li><a th:href="@{/recensioni}">Recensioni</a></li>
+			    <li><a th:href="@{/}">Chi Siamo</a></li>
+			    <li><a th:href="@{/gatti}">Colonia Felina</a></li>
+				<li th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"><a th:href="@{/user}">Profilo</a></li>
+			</ul>
 
-	<li class="dropdown">
-	    <a href="/servizi">Servizi</a>
-	    <ul class="dropdown-content">
-	        <li><a href="/servizi/servizio1">Servizio 1</a></li>
-	        <li><a href="/servizi/servizio2">Servizio 2</a></li>
-	        <li><a href="/servizi/servizio3">Servizio 3</a></li>
-	    </ul>
-	</li>
-
-	<li class="dropdown">
-	    <a href="/accessori">Accessori</a>
-	    <ul class="dropdown-content">
-	        <li><a href="/accessori/accessorio1">Accessorio 1</a></li>
-	        <li><a href="/accessori/accessorio2">Accessorio 2</a></li>
-	        <li><a href="/accessori/accessorio3">Accessorio 3</a></li>
-	    </ul>
-	</li>
-
-	<li class="dropdown">
-	    <a href="/accessori">Recensioni</a>
-	    <ul class="dropdown-content">
-	        <li><a href="/accessori/accessorio1">Recensioni per il sito</a></li>
-	        <li><a href="/accessori/accessorio2">Recensioni per eventi passati</a></li>
-
-	    </ul>
-	</li>
-	          <li><a th:href="@{/cuochi}">Chi Siamo</a></li>
-	          <li><a th:href="@{/cuochi}">Colonia Felina</a></li>
-	        </ul>
 	    </div>
 	    <div class="userAccess">
-	      <a><button>Registrati</button></a>
-	      <a><button>Accedi</button></a>
-	    </div>
+			<div class="logo-login">
+			  <a th:unless="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}" th:href="@{/login}">
+					  <img th:src="@{/images/user.png}" alt="Logo">
+					</a>
+			</div>
+		  <a th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"  href="/logout">  <button>logout</button></a>
+	  </div>
 	  </div>  
 	</header>
+	
+
+
+
 </body>
