--- a/iFioriDiTania/src/main/resources/templates/index.html
+++ b/iFioriDiTania/src/main/resources/templates/index.html
@@ -4,28 +4,229 @@
 <head>
     <title>Homepage</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Centra il contenitore principale */
+        .centered {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
+          .box-recensioni {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
+        /* Centra il contenitore Swiper all'interno del contenitore principale */
+        
+        .flowers-slider {
+            display: flex;
+            justify-content: center;
+            width: 80%; /* Adatta la larghezza secondo necessità */
+        }
+        .swiper-wrapper {
+            display: flex;
+            justify-content: center; /* Centra le slide all'interno del wrapper */
+        }
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .card {
+            width: 100%; /* Imposta la larghezza della card al 100% della slide */
+        }
+    </style>
 </head>
 
 <body>
-	<div th:replace="~{fragments/headernav :: headernav}"></div>
-	<header>
-        <div th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}">
-            Benvenuto, <span th:text="${#authentication.principal.fullName}">Utente</span>
-                    <a  href="/logout">Logout</a>
-            
+    <div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class="hero-section">
+        <div class="hero-content">
+            <h1>Fiori di Stagione <br><span>all day </span> <br>everyday</h1>
+            <p>Via Santo Spirito, 86170 Isernia IS</p>
+            <a href="tel:+393217654321"><button>chiama ora</button></a>
+            <a href="https://wa.me/393711641093">oppure  Scrivici su Whatsapp</a>
         </div>
-        <div th:if="${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}">
-            Benvenuto, <span th:text="${#authentication.principal.username}">Utente</span>
-                    <a  href="/logout">Logout</a>
-            
+        <div class="hero-img">
+            <img src="images/vaso_fiori.png" alt="flower">
         </div>
-        
-        <div th:unless="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}" ||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}">
-            <a href="/login">Login</a>
+    </div>
+
+
+ <div class="sliderFiori centered">
+        <h2>Tutti i Servizi</h2>
+        <div class="flowers-slider swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" th:each="servizio : ${tutti_servizi}">
+                    <div class="card">
+                        <a th:href="@{/servizio/{id}(id=${servizio.id})}" class="card-link">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide" th:each="picture : ${servizio.foto_servizio}">
+                                        <img th:src="@{'/images/foto_servizi/' + ${picture}}" alt="Immagine servizio" />
+                                    </div>
+                                    <div class="sfondo-card">
+                                        <div class="info">
+                                            <p class="p-bianchi" th:text="${servizio.nome_servizio}">Nome servizio</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Aggiungi la paginazione -->
+            <div class="swiper-pagination"></div>
         </div>
-    </header>
-	
+    </div>
+
+    <div>
+        <h2>Dove Siamo</h2>
+        <div class="embed-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2983.980103052749!2d14.234747275544786!3d41.59131318332206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133a814c35ce0973%3A0xdcf88853826dfa19!2sF%26F%20Fiori%20%2F%20I%20Fiori%20di%20Tania!5e0!3m2!1sit!2sit!4v1721080942724!5m2!1sit!2sit" frameborder="0" allowfullscreen>
+            </iframe>
+        </div>
+    </div>
+	<div class="dimensione_slide">
+	    <div class="sliderFiori centered">
+	        <h2>Tutti i Fiori</h2>
+	        <div class="flowers-slider swiper">
+	            <div class="swiper-wrapper">
+	                <div class="swiper-slide" th:each="fiore : ${tutti_fiori}">
+	                    <a th:href="@{/servizio/{id}(id=${fiore.id})}" class="card-link">
+	                        <div class="card">
+	                            <div class="swiper-container">
+	                                <div class="swiper-wrapper">
+	                                    <div class="swiper-slide" th:each="picture : ${fiore.foto_fiore}">
+	                                        <img th:src="@{'/images/foto_fiori/' + ${picture}}" alt="Immagine fiore" />
+	                                    </div>
+	                                    <div class="sfondo-card">
+	                                        <div class="info">
+	                                            <p class="p-bianchi" th:text="${fiore.nome_fiore}">Nome Fiore</p>
+	                                        </div>
+	                                    </div>
+	                                </div>
+	                            </div>
+	                        </div>
+	                    </a>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+
+    <div class="box-recensioni ">
+        <div class="sliderRecensioni ">
+            <h2 class="titolo-recensioni">Tutti i Recensioni</h2>
+            <div class="recensioni-slider swiper ">
+                <div class="recensioni-wrapper swiper-wrapper">
+                    <div class="recensioni-slide swiper-slide" th:each="recensione : ${tutte_recensioni_sito}">
+                        <div class="card-rec">
+                            <div class="recensioni-container">
+                                <div class="recensioni-wrapper">
+                                    <p th:text="${recensione.descrizione_recensione}">Nome recensione</p><br>
+                                    <div class="info">
+                                        <div class="star-rating">
+                                            <label th:each="i : ${#numbers.sequence(1, 5)}" th:classappend="${i <= recensione.rating} ? 'selected' : ''">&#9733;</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sfondo_bottone_rec">
+                <a th:href="@{/recensione/pagina_aggiungiRecensione_alSito}"><button class="bottone_aggiungi_recensione">aggiungi recensione</button></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="perche_comprare">
+        <h2>Perche Comprare Da Noi</h2>
+        <div class="contenitore_ragioni">
+            <div>
+                <h3>Lorem Ipsum</h3>
+                <img alt="" src="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis risus massa. Proin dictum pellentesque lectus, ac ultricies tellus malesuada in. Sed suscipit sem a tortor lobortis commodo. Proin quis vulputate nisl, molestie tempus quam. Vestibulum vel faucibus leo. Fusce.</p>
+            </div>
+            <div>
+                <h3>Lorem Ipsum</h3>
+                <img alt="" src="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis risus massa. Proin dictum pellentesque lectus, ac ultricies tellus malesuada in. Sed suscipit sem a tortor lobortis commodo. Proin quis vulputate nisl, molestie tempus quam. Vestibulum vel faucibus leo. Fusce.</p>
+            </div>
+            <div>
+                <h3>Lorem Ipsum</h3>
+                <img alt="" src="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis risus massa. Proin dictum pellentesque lectus, ac ultricies tellus malesuada in. Sed suscipit sem a tortor lobortis commodo. Proin quis vulputate nisl, molestie tempus quam. Vestibulum vel faucibus leo. Fusce.</p>
+            </div>
+            <div>
+                <h3>Lorem Ipsum</h3>
+                <img alt="" src="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis risus massa. Proin dictum pellentesque lectus, ac ultricies tellus malesuada in. Sed suscipit sem a tortor lobortis commodo. Proin quis vulputate nisl, molestie tempus quam. Vestibulum vel faucibus leo. Fusce.</p>
+            </div>
+        </div>
+    </div>
+
+    <div th:replace="~{fragments/footernav :: footernav}"></div>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var flowersSwiper = new Swiper('.flowers-slider', {
+                slidesPerView: 6, // Mostra 3 slide alla volta
+                spaceBetween: 10, // Spazio tra le slide
+                
+                
+                pagination: {
+                    el: '.flowers-slider .swiper-pagination',
+                    clickable: true,
+                },
+                loop: true,
+                autoplay: {
+                    delay: 5000, // Cambia slide ogni 5 secondi
+                    disableOnInteraction: false,
+                },
+            });
+
+            var recensioniSwiper = new Swiper('.recensioni-slider', {
+                slidesPerView: 6, // Mostra 5 slide alla volta
+                spaceBetween: 20, // Spazio tra le slide
+                centeredSlides: true,
+                pagination: {
+                    el: '.recensioni-slider .swiper-pagination',
+                    clickable: true,
+                },
+                loop: true,
+                autoplay: {
+                    delay: 5000, // Cambia slide ogni 5 secondi
+                    disableOnInteraction: false,
+                },
+                grabCursor: true,
+            });
+        });
+    </script>
+
+    <!-- Banner dei cookie -->
+    <div id="cookie-banner" class="cookie-banner">
+        <p>
+            We use cookies to ensure you get the best experience on our website.
+            <a th:href="@{/}">Learn more</a>
+        </p>
+        <button id="accept-cookies">Accept</button>
+    </div>
+    <script type="text/javascript">
+        document.getElementById('accept-cookies').addEventListener('click', function () {
+            document.getElementById('cookie-banner').style.display = 'none';
+        });
+    </script>
 </body>
 
 </html>
-	
