--- a/iFioriDiTania/src/main/resources/templates/registrationSuccessful.html
+++ b/iFioriDiTania/src/main/resources/templates/registrationSuccessful.html
@@ -1,35 +1,18 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
-	<title> Registrazione conclusa</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+    <title>Login</title>
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
-	<header>
-		<div th:if="${userDetails}">
-			<span th:text="${userDetails.username}"></span>
-			<a href="/logout">Logout</a>
-		</div>
-		<div th:unless="${user}">
-			<a href="/login">Login</a>
-		</div>
-	</header>
+    <div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class="hero-login">
+		<h1>Congratulazioni ti sei registrato!</h1>
 
-	
-	<h1>Congratulazioni ti sei registrato!</h1>
-	<div>
-		<span>Nome: </span>
-		<span th:text="${user.name}"></span>
-	</div>
-	<div>
-		<span>Cognome: </span>
-		<span th:text="${user.surname}"></span>
-	</div>
-	<div>
-		<span>Email: </span>
-		<span th:text="${user.email}"></span>
-	</div>
+    </div>
 </body>
+
 </html>
